fix welcome error tip vertical align

--- a/resources/installer/css/welcome.css
+++ b/resources/installer/css/welcome.css
@@ -31,7 +31,7 @@
 }
 
 .WelcomeForm {
-    position:fixed;
+    position:absolute;
     left:239px;
     right:239px;
     top:184px;
@@ -50,7 +50,6 @@
     width:272px;
     height:22px;
     padding-left:20px;
-    margin-top:5px;
     border:1px solid #9D9D9D;
     border-radius:3px;
     outline-style:none;
@@ -86,7 +85,7 @@
     left:50px;
     top:10px;
     width:120px;
-    height:26px;
+    height:22px;
     background:rgba(40,40,40,0.8);
     color:#D1D1D1;
     border:1px solid #000;
